@@ -1,3 +1,8 @@
+2006-04-03  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGImageWriteParam.java:
+	New test.
+
 2006-04-03  Tom Tromey  <tromey@redhat.com>
 
 	PR classpath/26971:
